# ragcheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  ragcheck.yaml
.github/workflows/: ragcheck.yml  tests.yml
docs/: ARCHITECTURE.md
examples/: chunk_demo.py  classifier_demo.py  demo.py  embed_demo.py  full_pipeline_demo.py  qa_demo.py  report_demo.py
ragcheck/: __init__.py  __main__.py  cli.py
ragcheck/analyzers/: __init__.py  chunkers.py  failure_classifier.py  recommender.py
ragcheck/core/: __init__.py  config.py  config_loader.py  document_loader.py  embeddings.py  progress.py  vector_store.py
ragcheck/reports/: __init__.py  chunk_visualizer.py  export.py  generator.py  html_report.py
ragcheck/testers/: __init__.py  auto_qa.py  retrieval_tester.py
sample_data/: components.txt  intro.txt
tests/: __init__.py
tests/integration/: test_end_to_end.py  test_pip_install.py
tests/unit/: test_auto_qa.py  test_chunkers.py  test_cli.py  test_config.py  test_embeddings.py  test_failure_classifier.py  test_html_report.py  test_recommender.py  test_retrieval_tester.py  test_vector_store.py
